--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,13 @@ charset = utf-8
 indent_style = tab
 indent_size = 4
 end_of_line = lf
+insert_final_newline = true
+
+[{*.txt,*.hbs}]
+insert_final_newline = false
+
+[*.md]
+trim_trailing_whitespace = false
+
+[docker-compose.yaml]
+indent_style = space
